Removes DisableSync and DISABLED misleading

Now in ModelTypeController we have two differrent meanings
for "disable".
1. State::DISABLED points sync error in model associating.
2. ModelTypeControllerDelegate::DisableSync disables sync
   and clears sync metadata for type.
This CL transforms State::DISABLED to State::FAILED and
removes misleading.

Bug: 823721
Change-Id: I018559ebd98ad4af093be559b35a702bd11f656a
Reviewed-on: https://chromium-review.googlesource.com/1089335
Reviewed-by: Vasilii Sukhanov <vasilii@chromium.org>
Reviewed-by: Mikel Astiz <mastiz@chromium.org>
Commit-Queue: Aleksei Loshkarev <lixan@yandex-team.ru>
Cr-Commit-Position: refs/heads/master@{#565239}
Former-commit-id: 8a4fe8a75d13c7c1b8cfc1dc399b7b5eed086ba8